[iOS] Move DynamicType multipler chooser to helper

This CL moves the function to get the multiplier to be applied to font
to get the font size preferred by the user to a util file.
Having it in a separate util file allows this function to be used in
other parts of the app.

Bug: 892145
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I2e3e0e2eaaa89e8735b1501c2e6a726cbab5424b
Reviewed-on: https://chromium-review.googlesource.com/c/1264598
Reviewed-by: Robert Kaplow (sloooow) <rkaplow@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598382}