ios/chrome/browser/web/font_size_tab_helper_unittest.mm
@@ -8,7 +8,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #import <UIKit/UIKit.h>
 
 #include "base/strings/utf_string_conversions.h"
-#include "base/test/metrics/histogram_tester.h"
 #import "ios/web/public/test/fakes/test_web_state.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #include "testing/platform_test.h"
@@ -48,7 +47,6 @@ class FontSizeTabHelperTest : public PlatformTest {
   UIContentSizeCategory preferred_content_size_category_ =
       UIContentSizeCategoryLarge;
   id application_ = nil;
-  base::HistogramTester histogram_tester_;
 
   DISALLOW_COPY_AND_ASSIGN(FontSizeTabHelperTest);
 };
@@ -62,8 +60,6 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithDefaultFontSize) {
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 1);
 
   // Change PreferredContentSizeCategory and send
   // UIContentSizeCategoryDidChangeNotification.
@@ -71,16 +67,12 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithDefaultFontSize) {
   SendUIContentSizeCategoryDidChangeNotification();
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(112)", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 2);
   web_state_.ClearLastExecutedJavascript();
 
   // Reload web page.
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(112)", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 3);
 }
 
 // Tests that a web page's font size is set properly in a procedure started
@@ -93,8 +85,6 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithExtraLargeFontSize) {
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(112)", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 1);
   web_state_.ClearLastExecutedJavascript();
 
   // Change PreferredContentSizeCategory and send
@@ -103,16 +93,12 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithExtraLargeFontSize) {
   SendUIContentSizeCategoryDidChangeNotification();
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(124)", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 2);
   web_state_.ClearLastExecutedJavascript();
 
   // Reload web page.
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(124)", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", false, 3);
 }
 
 // Tests that UMA log is sent when
@@ -126,8 +112,6 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithUnrecognizableFontSize) {
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("", last_executed_js);
-  histogram_tester_.ExpectUniqueSample(
-      "Accessibility.iOS.NewLargerTextCategory", true, 1);
 
   // Change PreferredContentSizeCategory and send
   // UIContentSizeCategoryDidChangeNotification.
@@ -135,14 +119,10 @@ TEST_F(FontSizeTabHelperTest, PageLoadedWithUnrecognizableFontSize) {
   SendUIContentSizeCategoryDidChangeNotification();
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(124)", last_executed_js);
-  histogram_tester_.ExpectBucketCount("Accessibility.iOS.NewLargerTextCategory",
-                                      false, 1);
   web_state_.ClearLastExecutedJavascript();
 
   // Reload web page.
   web_state_.OnPageLoaded(web::PageLoadCompletionStatus::SUCCESS);
   last_executed_js = base::UTF16ToUTF8(web_state_.GetLastExecutedJavascript());
   EXPECT_EQ("__gCrWeb.accessibility.adjustFontSize(124)", last_executed_js);
-  histogram_tester_.ExpectBucketCount("Accessibility.iOS.NewLargerTextCategory",
-                                      false, 2);
 }
